@@ -1,30 +1,10 @@
 {
-  "count": 21,
+  "count": 15,
   "uniques": 1,
   "clones": [
     {
-      "timestamp": "2023-08-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2023-08-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2023-08-30T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2023-08-31T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-09-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -64,7 +44,7 @@
     },
     {
       "timestamp": "2023-09-09T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
