@@ -1,3 +1,12 @@
+2023-09-15T08:22:14Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6195686948 # 776
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-15
+* notice: last 14d: unq all: 1 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 229 486 / 242 507
+* notice: next accum: outdated-unq outdated-all / unq all: 233 492 / 242 508
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2023-08-28 2023-08-29 2023-08-30 2023-08-31] / [2023-09-01 2023-09-09]
+
 2023-09-09T08:20:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6129855110 # 774
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-09
